--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <p id="add-header">
+      <section id="add-header">
         <label id="new-task-label" for="new-task">Add Item</label>
         <div class="task-wrapper">
           <input id="new-task" class="task" type="text">
           <button class="add">Add</button>
         </div>
-      </p>
+      </section>
       <h3 class="incomplete-header">Todo</h3>
       <ul id="incomplete-tasks">
         <li>
